--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -10,7 +10,9 @@
 </head>
 <style>
     .info {
-        margin: -2px;
+        margin-right: 10px;
+        margin-top: -2px;
+        margin-bottom: -2px;
     }
 
     .number-input {
@@ -22,6 +24,10 @@
         margin: 0;
     }
 
+    .ticket-p {
+        font-size: 18px;
+    }
+
     @media print {
         .no-print {
             display: none;
@@ -31,72 +37,127 @@
 <body>
 <div id="app">
     <div class="no-print">
-        <label>字体大小: {{infoFontSize}}</label>&nbsp;&nbsp;&nbsp;&nbsp;
-        <label>
-            每行数量
-            <input v-model="colCount" type="number" class="number-input">
-        </label>&nbsp;&nbsp;&nbsp;
-        <label>
-            图片大小
-            <input v-on:change="adjustImgSize()" v-on:input="adjustImgSize()" v-model="imgWidth" type="number" class="number-input">
-        </label>
-        <br/>
-        <button v-on:click="changeInfoFontSize(1)">+</button>
-        <button v-on:click="changeInfoFontSize(-1)">-</button>
-        <hr>
+        <h1>嘉兴市职业技能操作考试考场编排系统</h1>
+        <div  style="display: flex">
+            <div id="table" style="float: left; border-right: black 1px solid;">
+                <table>
+                    <thead>
+                    <tr>
+                        <td>
+                            科目类别
+                        </td>
+                        <td>
+                            科目类别名
+                        </td>
+                        <td>
+                            考场人数
+                        </td>
+                    </tr>
+                    </thead>
+                    <template v-for="subjectCount in subjectInfoMaxCountList">
+                        <tr>
+                            <td>
+                                {{subjectCount.subjectType}}
+                            </td>
+                            <td>
+                                {{subjectCount.subjectTypeName}}
+                            </td>
+                            <td>
+                                <label>
+                                    <input v-model="subjectCount.maxCount" type="number" class="number-input">
+                                </label>
+                            </td>
+                        </tr>
+                    </template>
+                </table>
+                <button v-on:click="change()">修改数量</button>
+            </div>
 
-        <table>
-            <thead>
-            <tr>
-                <td>
-                    科目类别
-                </td>
-                <td>
-                    科目类别名
-                </td>
-                <td>
-                    最大数量
-                </td>
-            </tr>
-            </thead>
-            <template v-for="subjectCount in subjectInfoMaxCountList">
-                <tr>
-                    <td>
-                        {{subjectCount.subjectType}}
-                    </td>
-                    <td>
-                        {{subjectCount.subjectTypeName}}
-                    </td>
-                    <td>
+            <div style="float: left; margin-left: 5px;">
+                <div>
+                    <div>
+                        <label>字体大小: {{infoFontSize}}</label>&nbsp;&nbsp;&nbsp;&nbsp;
+                        <button v-on:click="changeInfoFontSize(1)">+</button>
+                        <button v-on:click="changeInfoFontSize(-1)">-</button>
+                    </div>
+                    <hr>
+
+                    <div>
+                        <h4>核对单功能</h4>
                         <label>
-                            <input v-model="subjectCount.maxCount" type="number" class="number-input">
+                            每行数量
+                            <input v-model="colCount" type="number" class="number-input">
+                        </label>&nbsp;&nbsp;&nbsp;
+                        <label>
+                            图片大小
+                            <input v-on:change="adjustImgSize()" v-on:input="adjustImgSize()" v-model="imgWidth" type="number"
+                                   class="number-input">
                         </label>
-                    </td>
-                </tr>
-            </template>
-        </table>
-        <button v-on:click="change()">修改数量</button>
+                        <br/>
+                        <label>若图片数量较多，调整上述参数时会有卡顿。</label>
+                        <p>
+                            <label for="ww">核对单表头</label><input id="ww" v-model="tableTitle">
+                        </p>
+                        <button v-on:click="processPic(0)">顺序生成</button>
+                        <button v-on:click="processPic(Math.ceil(Math.random() * 10000000000))">随机生成</button>
+                        <button v-on:click="advanceChange()">高级设置</button>
+                        <br/>
+                        <div v-show="advance">
+                            <button v-on:click="processPic(random)">使用右侧随机数生成</button>
+                            <label>
+                                <input type="number" v-model="random">
+                            </label>
+                            <label>两次的随机数若一致，那么生成的顺序也是一致的。</label>
+                        </div>
+                        <p>
+                            <button v-on:click="exportExcel()">导出Excel</button>
+                        </p>
+                    </div>
 
-        <hr>
+                    <hr>
+                    <div>
+                        <h4>准考证打印</h4>
+                        <label>
+                            准考证号标题
+                            <input v-model="examName">
+                        </label>
+                        <br/>
+
+                        <label>
+                            考试时间
+                            <input v-model="examTime">
+                        </label>
+                        <br/>
+                        <button v-on:click="changeTab('准考证列表')">准考证生成</button>
+                    </div>
+
+                </div>
+                <hr>
+
+                <hr>
+
+                <p>
+                    打印前，请先大致浏览一遍页面，确保每张图片浏览器都显示出来了。
+                </p>
+                <p>
+                    点击打印后，建议生成PDF文件。同时可以导出Excel表格方便查看。
+                </p>
+                <hr>
+
+                <button onclick="window.print()">打印</button>
+
+            </div>
+        </div>
         <hr>
 
-        <button v-on:click="processPic(0)">顺序生成</button>
-        <button v-on:click="processPic(Math.ceil(Math.random() * 10000000000))">随机生成</button>
-        <br/>
-        <button v-on:click="processPic(random)">使用右侧随机数生成</button>
-        <label>
-            <input type="number" v-model="random">
-        </label>
-        <hr>
-        <label for="ww">核对单表头</label><input id="ww" v-model="tableTitle">
-        <hr>
-        <button onclick="window.print()">打印</button>
-        <button v-on:click="exportExcel()">导出Excel</button>
-        <hr>
+        <div>
+            <hr>
+        </div>
+        <h2>{{tab}}</h2><button v-on:click="changeTab('核对单列表')">切换至 核对单列表</button><button v-on:click="changeTab('准考证列表')">切换至 准考证列表</button>
         <hr>
     </div>
 
-    <div id="tables2" class="print">
+    <div id="tables2" class="print" v-if="tab === '核对单列表'">
         <template v-for="examPlaceInfo in examPlaceInfoList">
 
             <!--单个科目全部试场-->
@@ -116,7 +177,7 @@
                                         {{subjectInfo.subjectTypeName}}（{{subjectInfo.subjectType}}）
                                 </span>
                                 <span style="float: right">
-                                    试场：{{examRoomInfo.roomName == null ? addPrefixZero(index + 1, 3) : examRoomInfo.roomName}}
+                                    试场：{{examRoomInfo.roomName}}
                                 </span>
                             </div>
                         </caption>
@@ -126,12 +187,15 @@
                         <template v-for="row in Math.ceil(examRoomInfo.list.length / colCount)">
                             <tr>
                                 <!--每行具体内容-->
-                                <template v-for="(person, col) in examRoomInfo.list.slice((row - 1) * colCount, row * colCount)">
+                                <template
+                                        v-for="(person, col) in examRoomInfo.list.slice((row - 1) * colCount, row * colCount)">
                                     <td>
-                                        <img :src="picHost + person.picSrc" alt="" :width="imgWidth + 'px'" :height="imgHeight + 'px'" style="margin-right: 40px; margin-bottom: 0; margin-top: 12px;">
-                                        <p class="info">{{person.examNumber}}&nbsp;&nbsp;</p>
+                                        <img :src="picHost + person.picSrc" alt="" :width="imgWidth + 'px'"
+                                             :height="imgHeight + 'px'"
+                                             style="margin-right: 40px; margin-bottom: 0; margin-top: 12px;">
+                                        <p class="info">{{person.examNumber}}</p>
                                         <p class="info">{{person.name}}</p>
-                                        <p class="info">{{(person.seatNo == null || person.seatNo === "")? addPrefixZero(((row - 1) * colCount + col + 1), 2): person.seatNo}}</p>
+                                        <p class="info">{{person.seatNo}}</p>
                                     </td>
                                 </template>
 
@@ -140,7 +204,9 @@
                                     <template v-for="row in (colCount - examRoomInfo.list.length % colCount)">
                                         <!--空白行-->
                                         <td>
-                                            <img :src="emptyPng" alt=" " :width="imgWidth + 'px'" :height="imgHeight + 'px'" style="margin-right: 40px; margin-bottom: 0; margin-top: 12px; border: none">
+                                            <img :src="emptyPng" alt=" " :width="imgWidth + 'px'"
+                                                 :height="imgHeight + 'px'"
+                                                 style="margin-right: 40px; margin-bottom: 0; margin-top: 12px; border: none">
                                         </td>
                                     </template>
 
@@ -153,6 +219,47 @@
                 </template>
             </template>
         </template>
+    </div>
+
+    <div id="ticket" class="print" style="width: 2000px" v-if="tab === '准考证列表'">
+            <template v-for="examPlaceInfo in examPlaceInfoList">
+                <template v-for="subjectInfo in examPlaceInfo.list">
+                    <template v-for="row in Math.ceil(subjectInfo.personInfoList.length / ticketColCount)">
+                        <table>
+                            <tr>
+                                <template v-for="(person, col) in subjectInfo.personInfoList.slice((row - 1) * ticketColCount, row * ticketColCount)">
+                                    <td>
+                                        <h2 style="text-align: center">{{ticketTitle}}</h2>
+                                        <h2 style="text-align: center; margin-top: -15px">{{examName}}</h2>
+                                        <div style="margin-right: 20px; width: 520px; float: left">
+                                            <div style="float: right">
+                                                <img :src="picHost + person.picSrc" alt="" :width="ticketImgWidth + 'px'" :height="ticketImgWidth * 1.4 + 'px'" style="margin-right: 40px;">
+                                            </div>
+                                            <div style="margin-right: 20px">
+                                                <p class="ticket-p">准考证号：{{person.examNumber}}</p>
+                                                <p class="ticket-p">证件号码：{{person.idCard}}</p>
+                                                <p class="ticket-p">考生姓名：{{person.name}}&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;性别：{{person.sex}}</p>
+                                                <p class="ticket-p">考点：{{person.examPlaceName}}</p>
+                                                <p class="ticket-p">科目：{{person.subjectTypeName}} &nbsp;&nbsp;&nbsp;&nbsp; 考场：{{person.roomNo}} &nbsp;&nbsp;&nbsp; 座位号：{{person.seatNo}}</p>
+                                                <p class="ticket-p" v-show="examTime !== ''">时间：{{examTime}}</p>
+                                            </div>
+                                        </div>
+                                    </td>
+                                </template>
+                            </tr>
+                            <tr><td><p> </p><p> </p><p> </p></td></tr>
+                        </table>
+
+                        <template v-if="row % 4 === 0">
+                            <div style="page-break-after: always;"></div>
+                        </template>
+                    </template>
+                    <div style="page-break-after:always;"></div>
+                </template>
+                <div style="page-break-after:always;"></div>
+            </template>
+
+
     </div>
 </div>
 
