--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -11,8 +11,14 @@
 <style>
     .info {
         margin-right: 10px;
-        margin-top: -2px;
+        margin-top: 5px;
         margin-bottom: -2px;
+        font-family: 宋体, serif;
+    }
+
+    .check-caption {
+        font-size: 30px;
+        font-family: 宋体, serif;
     }
 
     .number-input {
@@ -20,12 +26,14 @@
     }
 
     .table-title {
-        font-size: 18px;
+        font-size: 28px;
         margin: 0;
+        font-family: 黑体, serif;
     }
 
     .ticket-p {
-        font-size: 18px;
+        font-size: 19px;
+        font-family: 宋体, serif;
     }
 
     @media print {
@@ -42,7 +50,7 @@
 <div id="app">
     <div class="no-print">
         <h1>嘉兴市职业技能操作考试考场编排系统</h1>
-        <div  style="display: flex">
+        <div style="display: flex">
             <div id="table" style="float: left; border-right: black 1px solid;">
                 <h3>
                     数量信息设置
@@ -59,6 +67,9 @@
                         <td>
                             考场人数
                         </td>
+                        <td>
+                            考试时间
+                        </td>
                     </tr>
                     </thead>
                     <template v-for="subjectCount in subjectInfoMaxCountList">
@@ -74,10 +85,16 @@
                                     <input v-model="subjectCount.maxCount" type="number" class="number-input">
                                 </label>
                             </td>
+                            <td>
+                                <label>
+                                    <input v-model="subjectCount.time" style="width: 230px">
+                                </label>
+                            </td>
                         </tr>
                     </template>
                 </table>
                 <button v-on:click="change()">修改数量</button>
+                <span>考试时间不会保存至本地，每次刷新都需要重新输入</span>
             </div>
 
             <div style="float: left; margin-left: 5px; border-right: black solid 1px">
@@ -100,13 +117,14 @@
                         </label>&nbsp;&nbsp;&nbsp;
                         <label>
                             图片大小
-                            <input v-on:change="adjustImgSize()" v-on:input="adjustImgSize()" v-model="imgWidth" type="number"
+                            <input v-on:change="adjustImgSize()" v-on:input="adjustImgSize()" v-model="imgWidth"
+                                   type="number"
                                    class="number-input">
                         </label>
                         <br/>
                         <label>若图片数量较多，调整上述参数时会有卡顿。</label>
                         <p>
-                            <label for="ww">核对单表头</label><input id="ww" v-model="tableTitle">
+                            <label for="ww">核对单表头</label><input id="ww" v-model="tableTitle" style="width: 300px;">
                         </p>
                         <button v-on:click="processPic(0)">顺序生成</button>
                         <button v-on:click="processPic(Math.ceil(Math.random() * 10000000000))">随机生成</button>
@@ -119,9 +137,9 @@
                                     <input type="number" v-model="random">
                                 </label>
                             </p>
-                           <p>
-                               <label>两次的随机数若一致，那么生成的顺序也是一致的。</label>
-                           </p>
+                            <p>
+                                <label>两次的随机数若一致，那么生成的顺序也是一致的。</label>
+                            </p>
                         </div>
                         <p>
                             <button v-on:click="exportExcel()">导出Excel</button>
@@ -130,13 +148,9 @@
 
                     <hr>
                     <div>
-                        <h4>准考证打印</h4>
+                        <h4>准考证生成</h4>
 
-                        <label>
-                            考试时间
-                            <input v-model="examTime">
-                        </label>
-                        <br/>
+                        <p>左侧可以输入每个类别的时间，不输入将不显示</p>
                         <button v-on:click="changeTab('准考证列表')">准考证生成</button>
                     </div>
 
@@ -165,7 +179,8 @@
                 <hr>
 
                 <p>
-                    “数量信息”设置栏，可以设置每种类别的每个市场的最大考生数量。类别将会从导入的Excel中的“科目类别”列自动提取。默认最大数量为 30。也可以根据类别来自定义设置。
+                    “数量信息”设置栏，可以设置每种类别的每个市场的最大考生数量。类别将会从导入的Excel中的“科目类别”列自动提取。默认最大数量为
+                    30。也可以根据类别来自定义设置。
                 </p>
                 <p>
                     这个数量信息将会保存在程序的文件夹下，名为“自定义配置.json”的文件。若Excel信息录入错误，导致提取类别名称不符合预期，可以删除“自定义配置.json”文件然后重启程序。
@@ -181,12 +196,14 @@
                     “核对单功能”中，“顺序生成”会主要按照Excel的顺序进行一次生成，不改变同一个类别内的顺序。随机生成则会随机打乱同一个考点下同一个类别内的考生次序。
                 </p>
                 <p>
-                    “高级选项”中，可以指定随机数。那么程序会用该随机数，通过某种算法，来打乱次序。为 0 的时候不打乱。随机数相同那么打乱情况也相同（也就是可以用来重现编排）。
+                    “高级选项”中，可以指定随机数。那么程序会用该随机数，通过某种算法，来打乱次序。为 0
+                    的时候不打乱。随机数相同那么打乱情况也相同（也就是可以用来重现编排）。
                 </p>
                 <hr>
 
                 <p>
-                    “准考证生成”需要先生成核对单，会根据核对单来生成准考证。一页 8 张。“考试时间”可选填写，否则将不显示(如填写“2022年1月1日 9:00-11:30”)。
+                    “准考证生成”需要先生成核对单，会根据核对单来生成准考证。一页 8 张。“考试时间”可选填写，否则将不显示(如填写“2022年1月1日
+                    9:00-11:30”)。
                 </p>
                 <hr>
 
@@ -201,7 +218,9 @@
         <div>
             <hr>
         </div>
-        <h2>{{tab}}</h2><button v-on:click="changeTab('核对单列表')">切换至 核对单列表</button><button v-on:click="changeTab('准考证列表')">切换至 准考证列表</button>
+        <h2>{{tab}}</h2>
+        <button v-on:click="changeTab('核对单列表')">切换至 核对单列表</button>
+        <button v-on:click="changeTab('准考证列表')">切换至 准考证列表</button>
         <hr>
     </div>
 
@@ -216,21 +235,24 @@
                     <template v-for="(examRoomInfo, index) in subjectInfo.examRoomInfoList">
                         <table>
                             <caption>
-                                <div style="margin-bottom: -10px;">
+                                <div style="margin-bottom: -5px;">
                                     <p class="table-title">{{tableTitle}}</p>
                                     <!--考点-科目-试场号-->
-                                    <span style="float: left">
+                                    <span class="check-caption" style="float: left">
                                         考点：{{examPlaceInfo.examPlaceName}}
                                 </span>
-                                    <span>
+                                    <span class="check-caption">
                                         {{subjectInfo.subjectTypeName}}（{{subjectInfo.subjectType}}）
                                 </span>
-                                    <span style="float: right">
+<!--                                    <span class="check-caption" style="float: right">-->
+<!--                                    &nbsp;&nbsp;&nbsp;-->
+<!--                                </span>-->
+                                    <span class="check-caption" style="float: right">
                                     试场：{{examRoomInfo.roomName}}
                                 </span>
+
                                 </div>
                             </caption>
-                            <template></template>
 
                             <!--单个考点下若干行-->
                             <template v-for="row in Math.ceil(examRoomInfo.list.length / colCount)">
@@ -244,7 +266,7 @@
                                                  style="margin-right: 40px; margin-bottom: 0; margin-top: 12px;">
                                             <p class="info">{{person.examNumber}}</p>
                                             <p class="info">{{person.name}}</p>
-                                            <p class="info">{{person.seatNo}}</p>
+                                            <p class="info">座位号：{{person.seatNo}}</p>
                                         </td>
                                     </template>
 
@@ -276,27 +298,41 @@
                     <template v-for="row in Math.ceil(subjectInfo.personInfoList.length / ticketColCount)">
                         <table>
                             <tr>
-                                <template v-for="(person, col) in subjectInfo.personInfoList.slice((row - 1) * ticketColCount, row * ticketColCount)">
+                                <template
+                                        v-for="(person, col) in subjectInfo.personInfoList.slice((row - 1) * ticketColCount, row * ticketColCount)">
                                     <td>
                                         <h2 style="text-align: center">{{ticketTitle}}</h2>
                                         <h2 style="text-align: center; margin-top: -15px">{{examName}}</h2>
-                                        <div style="margin-right: 20px; width: 520px; float: left">
+                                        <div style="margin-right: 20px; width: 535px; float: left">
                                             <div style="float: right">
-                                                <img :src="picHost + person.picSrc" alt="" :width="ticketImgWidth + 'px'" :height="ticketImgWidth * 1.4 + 'px'" style="margin-right: 40px;">
+                                                <img :src="picHost + person.picSrc" alt=""
+                                                     :width="ticketImgWidth + 'px'"
+                                                     :height="ticketImgWidth * 1.4 + 'px'" style="margin-right: 40px;">
                                             </div>
                                             <div style="margin-right: 20px">
                                                 <p class="ticket-p">准考证号：{{person.examNumber}}</p>
                                                 <p class="ticket-p">证件号码：{{person.idCard}}</p>
-                                                <p class="ticket-p">考生姓名：{{person.name}}&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;性别：{{person.sex}}</p>
-                                                <p class="ticket-p" v-show="person.examPlaceName !=null && person.examPlaceName.length > 0">考点：{{person.examPlaceName}}</p>
-                                                <p class="ticket-p">科目：{{person.subjectTypeName}} &nbsp;&nbsp;&nbsp;&nbsp; 考场：{{person.roomNo}} &nbsp;&nbsp;&nbsp; 座位号：{{person.seatNo}}</p>
-                                                <p class="ticket-p" v-show="examTime !== ''">时间：{{examTime}}</p>
+                                                <p class="ticket-p">
+                                                    考生姓名：{{person.name}}&nbsp;性别：{{person.sex}}</p>
+                                                <p class="ticket-p"
+                                                   v-show="person.examPlaceName !=null && person.examPlaceName.length > 0">
+                                                    考点：{{person.examPlaceName}}</p>
+                                                <p class="ticket-p">
+                                                    类别：{{person.subjectTypeName}}{{addPrefixZero(person.subjectTypeName.length,
+                                                    4)}} 考场号：{{person.roomNo}}&nbsp;座位号：{{person.seatNo}}</p>
+                                                <p class="ticket-p"
+                                                   v-show="subjectInfoMaxCountMap[person.subjectType].time !== ''">
+                                                    时间：{{subjectInfoMaxCountMap[person.subjectType].time}}</p>
                                             </div>
                                         </div>
                                     </td>
                                 </template>
                             </tr>
-                            <tr><td><p> </p><p> </p><p> </p></td></tr>
+                            <tr>
+                                <td><p></p>
+                                    <p></p>
+                                    <p></p></td>
+                            </tr>
                         </table>
 
                         <template v-if="row % 4 === 0">
