--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -17,8 +17,8 @@
     }
 
     .check-caption {
-        font-size: 30px;
-        font-family: 宋体, serif;
+        font-size: 25px;
+        font-family: 黑体, serif;
     }
 
     .number-input {
@@ -26,7 +26,7 @@
     }
 
     .table-title {
-        font-size: 28px;
+        font-size: 30px;
         margin: 0;
         font-family: 黑体, serif;
     }
