--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -49,7 +49,7 @@
 <body>
 <div id="app">
     <div class="no-print">
-        <h1>嘉兴市职业技能操作考试考场编排系统</h1>
+        <h1>嘉兴市职业技能操作考试试场编排系统</h1>
         <div style="display: flex">
             <div id="table" style="float: left; border-right: black 1px solid;">
                 <h3>
@@ -65,7 +65,7 @@
                             科目类别名
                         </td>
                         <td>
-                            考场人数
+                            试场人数
                         </td>
                         <td>
                             考试时间
@@ -319,7 +319,7 @@
                                                     考点：{{person.examPlaceName}}</p>
                                                 <p class="ticket-p">
                                                     类别：{{person.subjectTypeName}}{{addPrefixZero(person.subjectTypeName.length,
-                                                    4)}} 考场号：{{person.roomNo}}&nbsp;座位号：{{person.seatNo}}</p>
+                                                    4)}} 试场号：{{person.roomNo}}&nbsp;座位号：{{person.seatNo}}</p>
                                                 <p class="ticket-p"
                                                    v-show="subjectInfoMaxCountMap[person.subjectType].time !== ''">
                                                     时间：{{subjectInfoMaxCountMap[person.subjectType].time}}</p>
