--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -237,6 +237,7 @@
 
                     <!--科目下的单个试场-->
                     <template v-for="(room, index) in examRoomInfo.roomList">
+                        <div style="line-height: 1px">&nbsp;</div>
                         <table>
                             <caption>
                                 <div style="margin-bottom: 8px;">
