@dev 1.5.0 提供服务器部署网站功能

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -113,6 +113,29 @@
             <div style="float: left; margin-left: 5px; border-right: black solid 1px">
                 <div>
                     <div>
+                        <h4>考试信息文件上传</h4>
+                        <label>
+                            请选择考生信息Excel文件
+                            <input type="file">
+                        </label>
+                        <button v-on:click="">考生信息Excel模板下载</button>
+                        <br/>
+                        <label>
+                            请选择考场安排Excel文件
+                            <input type="file">
+                        </label>
+                        <button v-on:click="">考场安排Excel模板下载</button>
+                        <br/>
+                        <label>
+                            请输入考生照片链接地址
+                            <input>
+                        </label>
+                        <br/>
+                        <button v-on:click="">链接生成工具下载</button>
+                        <button v-on:click="">工具使用说明</button>
+                        <hr>
+                    </div>
+                    <div>
                         <h4>表单功能</h4>
                         <label>
                             图片大小
